# g4-pet-module

./: .gitignore  CMakeLists.txt  GeometryDescription.md  README.md  array_readout.cc  gui.mac  run.mac  vis.mac
build-org/: CMakeCache.txt  Makefile  cmake_install.cmake  myApp  run.mac  testA.root
include/: ActionInitialization.hh  AnalysisManager.hh  CollimatorParam.hh  DetectorConstruction.hh  DetectorMessenger.hh  DetectorParam.hh  EventAction.hh  Materials.hh  PhotonDetHit.hh  PhotonDetSD.hh  PrimDetHit.hh  PrimDetSD.hh  PrimaryGeneratorAction.hh  RunAction.hh  SiPM.hh  StackingAction.hh  TrackingAction.hh  Trajectory.hh  TrajectoryPoint.hh  UserTrackInformation.hh  XtalHit.hh  XtalSD.hh
macros/: runTMP.mac  run_grid_scan.sh  scan_positions.txt
scripts/: generate_scan.py  plotSiPMPositions.py  plot_scan_positions.py
src/: ActionInitialization.cc  AnalysisManager.cc  CollimatorParam.cc  DetectorConstruction.cc  DetectorMessenger.cc  DetectorParam.cc  EventAction.cc  Materials.cc  PhotonDetHit.cc  PhotonDetSD.cc  PrimDetHit.cc  PrimDetSD.cc  PrimaryGeneratorAction.cc  RunAction.cc  SiPM.cc  StackingAction.cc  TrackingAction.cc  Trajectory.cc  TrajectoryPoint.cc  UserTrackInformation.cc  XtalHit.cc  XtalSD.cc
